# django-app-quick-start

./: Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_app_quick_start/: asgi.py  settings.py  urls.py  wsgi.py
stores/: admin.py  models.py  serializers.py  urls.py  views.py
stores/migrations/: 0001_initial.py
