`[tool.poetry]
name = "django_app_quick_start"
version = "0.1.0"
description = ""
authors = ["RaduMolnar99 <radu.molnar@linnify.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
